[package]
name = "coolor"
version = "0.6.2"
edition = "2021"
authors = ["dystroy <denys.seguret@gmail.com>"]
repository = "https://github.com/Canop/coolor"
description = "conversion between color formats"
keywords = ["ansi", "hsl", "rgb", "color", "no-std"]
categories = ["no-std"]
license = "MIT"
readme = "README.md"

[features]
default = []

[dependencies]
ansi_colours = "1.2.2"
crossterm = { optional=true, version=">=0.23.2,<=0.25.0" }

[dev-dependencies]
rand = "0.8"
