[package]
name = "coolor"
version = "0.8.1"
edition = "2021"
authors = ["dystroy <denys.seguret@gmail.com>"]
repository = "https://github.com/Canop/coolor"
description = "conversion between color formats"
keywords = ["ansi", "hsl", "rgb", "color", "no-std"]
categories = ["no-std"]
license = "MIT"
readme = "README.md"

[features]
default = []

[dependencies]
crossterm = { optional=true, version=">=0.23.2" }

[dev-dependencies]
rand = { version = "0.8", features = ["std_rng"] }
glassbench = "0.3.6"

[[bench]]
name = "rgb_to_ansi"
harness = false

